feat(be): Add PredictionPool contract and deploy script

--- a/be/foundry.toml
+++ b/be/foundry.toml
@@ -4,3 +4,8 @@ out = "out"
 libs = ["lib"]
 
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
+
+etherscan_api_key = "${ETHERSCAN_API_KEY}"
+
+[rpc_endpoints]
+sepolia = "${ALCHEMY_SEPOLIA_RPC_URL}"
