--- a/fe/package.json
+++ b/fe/package.json
@@ -11,12 +11,15 @@
   "dependencies": {
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-tabs": "^1.1.13",
     "@rainbow-me/rainbowkit": "^2.2.9",
     "@tanstack/react-query": "^5.90.5",
     "@wagmi/core": "^2.22.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "i": "^0.3.7",
     "lucide-react": "^0.548.0",
+    "motion": "^12.23.24",
     "next": "16.0.0",
     "next-themes": "^0.4.6",
     "react": "19.2.0",
