--- a/be/foundry.toml
+++ b/be/foundry.toml
@@ -3,8 +3,10 @@ src = "src"
 out = "out"
 libs = ["lib"]
 
-# See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
+[metadata]
+author = "Siegfried Bozza (https://github.com/SiegfriedBz)"
 
+# See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
 etherscan_api_key = "${ETHERSCAN_API_KEY}"
 
 [rpc_endpoints]
