--- a/be/foundry.toml
+++ b/be/foundry.toml
@@ -3,11 +3,14 @@ src = "src"
 out = "out"
 libs = ["lib"]
 
-[metadata]
-author = "Siegfried Bozza (https://github.com/SiegfriedBz)"
+remappings = [
+    "@openzeppelin/contracts/=lib/openzeppelin-contracts/contracts/",
+    "@chainlink/=lib/chainlink/contracts/src/v0.8/"
+]
 
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
 etherscan_api_key = "${ETHERSCAN_API_KEY}"
 
 [rpc_endpoints]
 sepolia = "${ALCHEMY_SEPOLIA_RPC_URL}"
+
