feat: update Tenderly Web3 Actions with new contract ABIs and addresses

--- a/web3-actions/tenderly.yaml
+++ b/web3-actions/tenderly.yaml
@@ -1,6 +1,6 @@
 account_id: ""
 actions:
-  siegfriedbz/predictionpool-vlast:
+  siegfriedbz/bet2gether:
     runtime: v2
     sources: actions
     specs:
