--- a/web3-actions/actions/package.json
+++ b/web3-actions/actions/package.json
@@ -1,14 +1,14 @@
 {
-	"name": "web3-actions",
-	"scripts": {
-		"build": "tsc"
-	},
-	"devDependencies": {
-		"typescript": "^4.3.5"
-	},
-	"dependencies": {
-		"@tenderly/actions": "^0.2.0",
-		"ethers": "^6.15.0"
-	},
-	"private": true
+    "name": "actions",
+    "scripts": {
+        "build": "tsc"
+    },
+    "devDependencies": {
+        "typescript": "^4.3.5"
+    },
+    "dependencies": {
+        "@tenderly/actions": "^0.2.0",
+        "ethers": "^6.15.0"
+    },
+    "private": true
 }
