--- a/.github/workflows/foundry-tests.yml
+++ b/.github/workflows/foundry-tests.yml
@@ -23,6 +23,7 @@ jobs:
       - name: Run Foundry Tests
         env:
           MY_ADDRESS: ${{ secrets.MY_ADDRESS }}
+          PRIVATE_KEY: ${{ secrets.PRIVATE_KEY }}
         run: |
           cd be
           forge install
